fix body overflow

--- a/client/scss/_base.scss
+++ b/client/scss/_base.scss
@@ -38,7 +38,7 @@ body {
   background: url(http://80.240.132.120/test/inner-bg.jpg) #162232 center top no-repeat;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: visible;
   font-family: 'Titillium Web', sans-serif;
 }
 
